--- a/src/main/resources/vm/welcome.vm
+++ b/src/main/resources/vm/welcome.vm
@@ -32,9 +32,9 @@
             font-size: 23px;
         }
 
-        .layui-inline {
-            width: 200px;
-        }
+        /*.layui-inline {*/
+        /*    width: 200px;*/
+        /*}*/
 
         .top {
             margin-top: 20px;
