--- a/src/main/resources/vm/manage/build.vm
+++ b/src/main/resources/vm/manage/build.vm
@@ -58,16 +58,13 @@
                 btn: ['确定', '不确定'] //按钮
             }, function (index) {
                 layer.close(index);
-                index = layer.load(1, {
-                    shade: [0.5, '#fff'] //0.1透明度的白色背景
-                });
                 var key = that.attr("data-key");
                 var id = that.attr("data-id");
-                $.ajax({
+                loadingAjax({
                     url: './build_install',
-                    type: 'POST',
-                    dataType: 'json',
-                    data: {id: id, key: key},
+                    data: {
+                        id: id, key: key
+                    },
                     success: function (data) {
                         layer.msg(data.msg);
                         if (200 == data.code) {
@@ -78,12 +75,6 @@
                                 parent.reloadTable();
                             }, 2000);
                         }
-                    },
-                    error: function (err) {
-                        layer.msg('安装失败');
-                    },
-                    complete: function () {
-                        layer.close(index);
                     }
                 });
             }, function () {
