--- a/src/main/resources/vm/manage/logBack.vm
+++ b/src/main/resources/vm/manage/logBack.vm
@@ -58,15 +58,9 @@
                 btn: ['确定', '不确定'] //按钮
             }, function (index) {
                 layer.close(index);
-                index = layer.load(1, {
-                    shade: [0.5, '#fff'] //0.1透明度的白色背景
-                });
-                // var key = that.attr("data-key");
                 var id = that.attr("data-id");
-                $.ajax({
+                loadingAjax({
                     url: './logBack_delete',
-                    type: 'POST',
-                    dataType: 'json',
                     data: {
                         id: id,
                         name: name
@@ -78,12 +72,6 @@
                                 window.location.reload();
                             }, 2000);
                         }
-                    },
-                    error: function (err) {
-                        layer.msg('删除失败');
-                    },
-                    complete: function () {
-                        layer.close(index);
                     }
                 });
             }, function () {
