--- a/src/main/resources/vm/login.vm
+++ b/src/main/resources/vm/login.vm
@@ -94,7 +94,7 @@
                 }
                 var sendData = formatPwd(dataForm.field, "userPwd");
                 loadingAjax({
-                    url: '/userLogin',
+                    url: './userLogin',
                     data: sendData,
                     success: function (data) {
                         if (200 == data.code) {
@@ -103,7 +103,7 @@
                                 key: "userName",
                                 value: sendData.userName
                             });
-                            window.location.href = '/index';
+                            window.location.href = './index';
                         } else {
                             // 显示验证码
                             if (600 == data.code) {
@@ -123,7 +123,7 @@
     }
 
     function showCode() {
-        $("#codeImg").attr("src", "/randCode.png?time=" + new Date().getTime());
+        $("#codeImg").attr("src", "./randCode.png?time=" + new Date().getTime());
         $("#randCodeDiv").show();
     }
 </script>
