--- a/src/main/resources/vm/manage/projectInfo.vm
+++ b/src/main/resources/vm/manage/projectInfo.vm
@@ -167,7 +167,7 @@
                 title: '运行状态',
                 templet: "#status_templ",
                 sort: true,
-                width: '11%'
+                width: '12%'
             },
                 {field: 'op', title: '操作', toolbar: '#bar_projects'}
             ]],
@@ -213,7 +213,7 @@
                 success: function (data) {
                     if (200 == data.code) {
                         for (var key in data.data) {
-                            $("span[p-Id='" + key + "']").text(data.data[key]);
+                            $("span[p-Id='" + key + "']").text(data.data[key]).attr("title", data.data[key]);
                         }
                     }
                 },
