--- a/src/main/resources/vm/manage/projectInfo.vm
+++ b/src/main/resources/vm/manage/projectInfo.vm
@@ -35,7 +35,7 @@
     <input class="layui-hide" type="checkbox" id="" disabled name="status" {{# if(d.status){ }} checked {{# } }}
            lay-skin="switch"
            lay-text="运行中|未运行">
-    <span p-Id="{{d.id}}"></span>
+    <span p-Id="{{d.id}}" title="端口：{{ getItemPort(d) }}">{{ getItemPort(d) }}</span>
 </script>
 
 <script type="text/html" id="toolbarDemo">
@@ -58,7 +58,7 @@
 </script>
 
 </body>
-<script>
+<script type="text/javascript">
     const HSL = [];
 
     function randomHsl() {
@@ -119,6 +119,17 @@
 <script type="text/javascript">
     const groupMap = new Map();
     const apiWhere = {};
+    var cachePortInfo;
+
+    function getItemPort(data) {
+        if (!data.status) {
+            return "";
+        }
+        if (!cachePortInfo) {
+            return "";
+        }
+        return cachePortInfo[data.id] || "";
+    }
 
     function loadSuccess() {
         // 获取缓存中的值
@@ -129,7 +140,7 @@
         table.render({
             id: 'table_project',
             elem: '#tab_project',
-            url: '/manage/getProjectInfo',
+            url: './getProjectInfo',
             // height: 'full-52',
             toolbar: '#toolbarDemo',
             even: true,
@@ -204,7 +215,7 @@
                 return
             }
             $.ajax({
-                url: '/manage/getProjectPort',
+                url: './getProjectPort',
                 type: 'POST',
                 dataType: 'json',
                 data: {
@@ -212,8 +223,9 @@
                 },
                 success: function (data) {
                     if (200 == data.code) {
+                        cachePortInfo = data.data;
                         for (var key in data.data) {
-                            $("span[p-Id='" + key + "']").text(data.data[key]).attr("title", data.data[key]);
+                            $("span[p-Id='" + key + "']").text(data.data[key]).attr("title", "端口：" + data.data[key]);
                         }
                     }
                 },
@@ -273,7 +285,7 @@
             var manager = data.manager;
             if (manager) {
                 var lay_id = 'tab_file_' + data.id;
-                var url = '/file/filemanage?id=' + data.id;
+                var url = './file/filemanage?id=' + data.id;
                 tabChange({
                     id: data.id,
                     url: url,
@@ -286,7 +298,7 @@
 
         // 管理
         function manageApplication(data) {
-            var url = '/manage/console?id=' + data.id;
+            var url = './console?id=' + data.id;
             tabChange({
                 id: data.id,
                 url: url,
@@ -314,7 +326,7 @@
     function projectRecover() {
         tabChange({
             id: 'projectRecover',
-            url: '/manage/project_recover',
+            url: './project_recover',
             title: '回收站',
         });
     }
