--- a/src/main/resources/vm/system/certificate.vm
+++ b/src/main/resources/vm/system/certificate.vm
@@ -245,10 +245,8 @@
                 formData.append("key", key);
                 formData.append("name", name);
                 formData.append("id", id);
-                $.ajax({
+                loadingAjax({
                     url: data.form.action,
-                    type: 'POST',
-                    dataType: 'json',
                     contentType: false,
                     processData: false,
                     data: formData,
@@ -259,9 +257,6 @@
                             // 刷新表
                             table.reload('tab_certificate');
                         }
-                    },
-                    error: function (err) {
-                        layer.alert(err.msg);
                     }
                 });
                 return false;
@@ -307,10 +302,8 @@
             title: '系统提示'
         }, function (index) {
             layer.close(index);
-            $.ajax({
+            loadingAjax({
                 url: './delete',
-                type: 'POST',
-                dataType: 'json',
                 data: {id: data.id},
                 success: function (data) {
                     if (200 == data.code) {
@@ -320,9 +313,6 @@
                     } else {
                         layer.msg(data.msg);
                     }
-                },
-                error: function (err) {
-                    layer.msg('删除失败！');
                 }
             });
         });
