--- a/src/main/resources/vm/system/nginxSetting.vm
+++ b/src/main/resources/vm/system/nginxSetting.vm
@@ -171,10 +171,8 @@
 
         //提交配置信息
         form.on('submit(submitNgx)', function (data) {
-            $.ajax({
-                url: '/system/nginx/updateNgx',
-                type: 'POST',
-                dataType: 'json',
+            loadingAjax({
+                url: './updateNgx',
                 data: data.field,
                 success: function (data) {
                     layer.msg(data.msg);
@@ -183,9 +181,6 @@
                             window.location.reload()
                         }
                     }
-                },
-                error: function (err) {
-                    layer.alert(err.msg);
                 }
             });
             return false;
@@ -193,10 +188,8 @@
 
         //提交配置信息
         form.on('submit(submitFast)', function (data) {
-            $.ajax({
-                url: '/system/nginx/updateNgx',
-                type: 'POST',
-                dataType: 'json',
+            loadingAjax({
+                url: './updateNgx',
                 data: data.field,
                 success: function (data) {
                     layer.msg(data.msg);
@@ -205,9 +198,6 @@
                             window.location.reload()
                         }
                     }
-                },
-                error: function (err) {
-                    layer.alert(err.msg);
                 }
             });
             return false;
