--- a/src/main/resources/vm/index.vm
+++ b/src/main/resources/vm/index.vm
@@ -125,29 +125,30 @@
         <div class="layui-side-scroll">
             <ul class="layui-nav layui-nav-tree" lay-filter="menu">
                 <li class="layui-nav-item layui-this">
-                    <a href="javascript:;" data-options="{'id':'welcome', 'title':'首页', 'url':'/welcome'}">首页</a>
+                    <a href="javascript:;" data-options="{'id':'welcome', 'title':'首页', 'url':'./welcome'}">首页</a>
                 </li>
                 <li class="layui-nav-item">
-                    <a href="javascript:;" data-options="{'id':'manage', 'title':'项目管理', 'url':'/manage/projectInfo'}">项目管理</a>
+                    <a href="javascript:;" data-options="{'id':'manage', 'title':'项目管理', 'url':'./manage/projectInfo'}">项目管理</a>
                 </li>
                 #if($user.isManage())
                     <li class="layui-nav-item">
-                        <a href="javascript:;" data-options="{'id':'user', 'title':'用户管理', 'url':'/user/list'}">用户管理</a>
+                        <a href="javascript:;"
+                           data-options="{'id':'user', 'title':'用户管理', 'url':'./user/list'}">用户管理</a>
                     </li>
                 #end
                 <li class="layui-nav-item">
                     <a href="javascript:;"
-                       data-options="{'id':'whitelistDirectory', 'title':'白名单目录', 'url':'/system/whitelistDirectory'}">白名单目录</a>
+                       data-options="{'id':'whitelistDirectory', 'title':'白名单目录', 'url':'./system/whitelistDirectory'}">白名单目录</a>
                 </li>
                 #if($user.isSystemUser())
                     <li class="layui-nav-item">
                         <a href="javascript:;"
-                           data-options="{'id':'alioss', 'title':'阿里云OSS', 'url':'/system/alioss'}">阿里云OSS</a>
+                           data-options="{'id':'alioss', 'title':'阿里云OSS', 'url':'./system/alioss'}">阿里云OSS</a>
                     </li>
                 #end
                 <li class="layui-nav-item">
                     <a href="javascript:;"
-                       data-options="{'id':'nginx', 'title':'nginx管理', 'url':'/system/nginx'}">nginx管理</a>
+                       data-options="{'id':'nginx', 'title':'nginx管理', 'url':'./system/nginx/list.html'}">nginx管理</a>
                 </li>
             </ul>
         </div>
