--- a/src/main/resources/vm/manage/projectInfo.vm
+++ b/src/main/resources/vm/manage/projectInfo.vm
@@ -285,7 +285,7 @@
             var manager = data.manager;
             if (manager) {
                 var lay_id = 'tab_file_' + data.id;
-                var url = './file/filemanage?id=' + data.id;
+                var url = './manage/file/list.html?id=' + data.id;
                 tabChange({
                     id: data.id,
                     url: url,
@@ -298,7 +298,7 @@
 
         // 管理
         function manageApplication(data) {
-            var url = './console?id=' + data.id;
+            var url = './manage/console?id=' + data.id;
             tabChange({
                 id: data.id,
                 url: url,
@@ -326,7 +326,7 @@
     function projectRecover() {
         tabChange({
             id: 'projectRecover',
-            url: './project_recover',
+            url: './manage/recover/list.html',
             title: '回收站',
         });
     }
