--- a/src/main/resources/vm/system/alioss.vm
+++ b/src/main/resources/vm/system/alioss.vm
@@ -66,10 +66,8 @@
 <script type="text/javascript">
     function loadSuccess() {
         form.on('submit(formDemo)', function (data) {
-            $.ajax({
+            loadingAjax({
                 url: './alioss_submit',
-                type: 'POST',
-                dataType: 'json',
                 data: data.field,
                 success: function (data) {
                     layer.msg(data.msg);
@@ -78,9 +76,6 @@
                             window.location.reload()
                         }, 2000);
                     }
-                },
-                error: function (err) {
-                    layer.alert(err.msg);
                 }
             });
             return false;
