--- a/src/main/resources/vm/system/whitelistDirectory.vm
+++ b/src/main/resources/vm/system/whitelistDirectory.vm
@@ -57,10 +57,8 @@
 <script type="text/javascript">
     function loadSuccess() {
         form.on('submit(formDemo)', function (data) {
-            $.ajax({
+            loadingAjax({
                 url: './whitelistDirectory_submit',
-                type: 'POST',
-                dataType: 'json',
                 data: data.field,
                 success: function (data) {
                     layer.msg(data.msg);
@@ -69,9 +67,6 @@
                             window.location.reload()
                         }, 2000);
                     }
-                },
-                error: function (err) {
-                    layer.alert(err.msg);
                 }
             });
             return false;
