路径调整，请求头获取二级代理路径

--- a/src/main/resources/vm/index.vm
+++ b/src/main/resources/vm/index.vm
@@ -170,7 +170,7 @@
             </ul> -->
             <div class="layui-tab-content">
                 <div class="layui-tab-item layui-show">
-                    <iframe src="/welcome" frameborder="0" class="custom-iframe"></iframe>
+                    <iframe src="./welcome" frameborder="0" class="custom-iframe"></iframe>
                 </div>
             </div>
         </div>
