--- a/src/main/resources/vm/common/head.vm
+++ b/src/main/resources/vm/common/head.vm
@@ -3,15 +3,15 @@
 <meta content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no" name="viewport">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
-<link rel="icon" href="/static/favicon.ico" type="image/x-icon"/>
-<link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon"/>
-<link rel="stylesheet" href="/static/layui/css/layui.css?v=$staticCacheTime" media="all">
+<link rel="icon" href="$!jpomProxyPath/static/favicon.ico" type="image/x-icon"/>
+<link rel="shortcut icon" href="$!jpomProxyPath/static/favicon.ico" type="image/x-icon"/>
+<link rel="stylesheet" href="$!jpomProxyPath/static/layui/css/layui.css?v=$staticCacheTime" media="all">
 <style>
     .x-red {
         color: red;
     }
 </style>
-<script type="text/javascript" src="/static/layui/layui.js?v=$staticCacheTime"></script>
+<script type="text/javascript" src="$!jpomProxyPath/static/layui/layui.js?v=$staticCacheTime"></script>
 <script type="text/javascript">
     var $, layer, form, element, table;
     ## 不缓存
@@ -56,7 +56,7 @@
     ## 获取自适应的socket
     function getSocketHost() {
         var pro = location.protocol === 'https:' ? 'wss://' : 'ws://';
-        return pro + window.location.host;
+        return pro + window.location.host + "$!jpomProxyPath";
     }
 
     ## 带loading 效果的网络请求
