--- a/src/main/resources/vm/install.vm
+++ b/src/main/resources/vm/install.vm
@@ -9,7 +9,7 @@
 <body>
 <div class="layui-carousel" id="div-carousel" style="width: 100%; height: 100%; position: fixed; z-index: 0;">
     <div carousel-item>
-        <div><img src="/static/backgrounds/1.jpg?v=$staticCacheTime" style="width: 100%;"></div>
+        <div><img src="$!jpomProxyPath/static/backgrounds/1.jpg?v=$staticCacheTime" style="width: 100%;"></div>
     </div>
 </div>
 <div class="layui-container" style="margin-top: 150px;">
