--- a/src/main/resources/vm/login.vm
+++ b/src/main/resources/vm/login.vm
@@ -21,9 +21,9 @@
 <body>
 <div class="layui-carousel auto" id="div-carousel" style=" position: fixed; z-index: 0;">
     <div carousel-item>
-        <div><img src="/static/backgrounds/1.jpg?v=$staticCacheTime" class="auto"></div>
-        <div><img src="/static/backgrounds/2.jpg?v=$staticCacheTime" class="auto"></div>
-        <div><img src="/static/backgrounds/3.jpg?v=$staticCacheTime" class="auto"></div>
+        <div><img src="$!jpomProxyPath/static/backgrounds/1.jpg?v=$staticCacheTime" class="auto"></div>
+        <div><img src="$!jpomProxyPath/static/backgrounds/2.jpg?v=$staticCacheTime" class="auto"></div>
+        <div><img src="$!jpomProxyPath/static/backgrounds/3.jpg?v=$staticCacheTime" class="auto"></div>
     </div>
 </div>
 <div class="layui-container" style="margin-top: 150px;">
