--- a/src/main/resources/vm/manage/projectInfo.vm
+++ b/src/main/resources/vm/manage/projectInfo.vm
@@ -35,6 +35,9 @@
     <input class="layui-hide" type="checkbox" id="" disabled name="status" {{# if(d.status){ }} checked {{# } }}
            lay-skin="switch"
            lay-text="运行中|未运行">
+</script>
+
+<script type="text/html" id="port_templ">
     <span p-Id="{{d.id}}" title="端口：{{ getItemPort(d) }}">{{ getItemPort(d) }}</span>
 </script>
 
@@ -59,65 +62,6 @@
 
 </body>
 <script type="text/javascript">
-    const HSL = [];
-
-    function randomHsl() {
-        var H = Math.random();
-        var S = Math.random();
-        var L = Math.random();
-        return [H, S, L];
-    }
-
-    // 获取HSL数组
-    function getHslArray(hslLength) {
-        var allLen = HSL.length;
-        if (HSL.length >= hslLength) {
-            return;
-        }
-        for (var i = 0; i < hslLength - allLen; i++) {
-            var ret = this.randomHsl();
-
-            // 颜色相邻颜色差异须大于 0.25
-            if (allLen > 0 && Math.abs(ret[0] - HSL[allLen - 1][0]) < 0.25) {
-                i--;
-                continue; // 重新获取随机色
-            }
-            ret[1] = 0.7 + (ret[1] * 0.2); // [0.7 - 0.9] 排除过灰颜色
-            ret[2] = 0.4 + (ret[2] * 0.4); // [0.4 - 0.8] 排除过亮过暗色
-
-            // 数据转化到小数点后两位
-            ret = ret.map(function (item) {
-                return parseFloat(item.toFixed(2));
-            });
-            HSL.push(ret);
-        }
-    }
-
-    function hslToRgb(H, S, L) {
-        var R, G, B;
-        if (+S === 0) {
-            R = G = B = L; // 饱和度为0 为灰色
-        } else {
-            var hue2Rgb = function (p, q, t) {
-                if (t < 0) t += 1;
-                if (t > 1) t -= 1;
-                if (t < 1 / 6) return p + (q - p) * 6 * t;
-                if (t < 1 / 2) return q;
-                if (t < 2 / 3) return p + (q - p) * (2 / 3 - t) * 6;
-                return p;
-            };
-            var Q = L < 0.5 ? L * (1 + S) : L + S - L * S;
-            var P = 2 * L - Q;
-            R = hue2Rgb(P, Q, H + 1 / 3);
-            G = hue2Rgb(P, Q, H);
-            B = hue2Rgb(P, Q, H - 1 / 3);
-        }
-        return [Math.round(R * 255), Math.round(G * 255), Math.round(B * 255)];
-    }
-</script>
-
-<script type="text/javascript">
-    const groupMap = new Map();
     const apiWhere = {};
     var cachePortInfo;
 
@@ -147,38 +91,26 @@
             where: apiWhere,
             cols: [[{
                 field: 'name', title: '项目名称', width: '15%', sort: true, templet: function (d) {
-                    var rgb;
-                    if (!d.manager) {
-                        rgb = [211, 211, 211];
-                    } else {
-                        if (d.group) {
-                            var size = groupMap.size;
-                            rgb = groupMap.get(d.group)
-                            if (!rgb) {
-                                size += 1;
-                                getHslArray(size);
-                                rgb = hslToRgb.apply(this, HSL[size - 1]);
-                                groupMap.set(d.group, rgb);
-                            }
-                        }
-                    }
-                    return "<span   name='" + d.id + "' title='分组：" + d.group + "(项目Id:" + d.id + ")' style='background: rgb(" + rgb + ");padding: 10px;'></span >" + d.name;
-                }
-            }, {
-                title: 'lib状态', width: '10%', sort: true, templet: function (d) {
-                    return (d.runLibDesc || "") + " / " + (d.useLibDesc || "");
+                    var title = '分组:' + d.group + '  项目Id:' + d.id;
+                    title += '  lib状态:' + (d.runLibDesc || "") + " / " + (d.useLibDesc || "");
+                    return "<span  title='" + title + "'>" + d.name + "</span >";
                 }
             }, {
                 field: 'createTime', title: '创建时间', sort: true, width: '13%'
             }, {
-                field: 'modifyUser', title: '最后修改人', sort: true, width: '13%'
-            }, {
                 field: 'modifyTime', title: '修改时间', sort: true, width: '13%'
+            }, {
+                field: 'modifyUser', title: '最后修改人', sort: true, width: '13%'
             }, {
                 title: '运行状态',
                 templet: "#status_templ",
                 sort: true,
-                width: '12%'
+                width: '10%'
+            }, {
+                title: '端口',
+                templet: "#port_templ",
+                sort: true,
+                width: '8%'
             },
                 {field: 'op', title: '操作', toolbar: '#bar_projects'}
             ]],
