--- a/src/main/resources/vm/manage/filemanage.vm
+++ b/src/main/resources/vm/manage/filemanage.vm
@@ -26,8 +26,9 @@
 <div class="layui-row">
     <button id="uploadFile" class="layui-btn layui-btn-sm"><i class="layui-icon">&#xe67c;</i>批量上传</button>
     <button id="uploadFile_Import" class="layui-btn layui-btn-sm"><i class="layui-icon">&#xe67c;</i>覆盖导入</button>
-    <button id="refresh" class="layui-btn layui-btn-sm">刷新</button>
+    <button onclick="reloadTable();" class="layui-btn layui-btn-sm">刷新</button>
     <button id="clear" class="layui-btn layui-btn-sm layui-btn-danger">清空文件</button>
+    <button id="build" class="layui-btn  layui-btn-sm layui-btn-normal">OSS构建</button>
 </div>
 <table class="layui-table" id="tab_file" lay-filter="tab_file" style="margin: 0;"></table>
 </body>
@@ -70,12 +71,7 @@
                     statusCode: 200
                 },
                 done: function () {
-                    $("tbody").on("mouseover", "tr", function () {
-                        $(this).siblings().css("opacity", 0.3);
-                    });
-                    $("tbody").on("mouseout", "tr", function () {
-                        $(this).siblings().css("opacity", 1);
-                    });
+
                 }
             });
             var updateFail = false;
@@ -102,7 +98,7 @@
                     }
                     layer.msg("文件总数：" + obj.total + " 成功上传：" + obj.successful + " 上传失败：" + obj.aborted);
                     setTimeout(function () {
-                        table.reload('table_file', {});
+                        reloadTable();
                     }, 2000);
                 },
                 done: function (res, index, upload) {
@@ -138,21 +134,14 @@
                 done: function (res, index, upload) {
                     layer.msg(res.msg);
                     setTimeout(function () {
-                        table.reload('table_file', {});
                         layer.closeAll();
+                        reloadTable();
                     }, 2000);
                 },
                 error: function () {
                     layer.msg('上传失败');
                     layer.closeAll();
                 }
-            });
-
-            // 点击'上传文件'事件
-            $('#refresh').on('click', function () {
-                table.reload('table_file', {
-                    // height: 'full-52'
-                });
             });
 
             // 点击'上传文件'事件
@@ -169,14 +158,21 @@
                         success: function (data) {
                             layer.msg(data.msg);
                             if (200 === data.code) {
-                                // 刷新项目列表
-                                table.reload('table_file', {});
+                                reloadTable();
                             }
                         }
                     });
                 });
             });
-
+            $("#build").click(function () {
+                layer.open({
+                    type: 2,
+                    title: '自动构建',
+                    shade: 0.8,
+                    area: ['80%', '90%'],
+                    content: '../build?id=$id'
+                });
+            });
 
             // 表格工具条事件
             table.on('tool(tab_file)', function (obj) {
@@ -185,8 +181,7 @@
                 if ('delete' === event) {
                     // 删除文件
                     deleteFile(data);
-                }
-                if ('download' === event) {
+                } else if ('download' === event) {
                     // 下载文件
                     downloadFile(data);
                 }
@@ -213,14 +208,18 @@
                         success: function (data) {
                             layer.msg(data.msg);
                             if (200 === data.code) {
-                                // 刷新项目列表
-                                table.reload('table_file', {});
+                                reloadTable();
                             }
                         }
                     });
                 });
             }
         });
+    }
+
+    function reloadTable() {
+        // 刷新项目列表
+        table.reload('table_file', {});
     }
 </script>
 </html>
